[tool.poetry]
name = "celestial-nexus-receiver"
version = "0.1.0"
description = "A package for handling celestial nexus data."
authors = ["nashondas-oss <contact@nashondas.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"